--- a/Exerci/ex022/fundo06.html
+++ b/Exerci/ex022/fundo06.html
@@ -13,12 +13,12 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
 
         }
         main {
             background-color: white;
-            height: 200px;
-            width: 500px;
+            max-width: 500px;
             border-radius: 20px;
             border: 2px solid black;
             padding: 10px;
@@ -30,7 +30,7 @@
 <body>
     <main>
         <h1>Testes com fundos </h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur eaque illo velit voluptas qui obcaecati cum dicta sed, aliquam, quasi doloremque neque eos repudiandae accusantium, corporis accusamus. Consequatur, iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maiores distinctio nam iure impedit earum incidunt consequatur quas! Inventore expedita eligendi tempore dolor quibusdam voluptatibus voluptas libero debitis quod officiis?</p>
     </main>
 </body>
 </html>
