--- a/desafios/100 desafios/ds03/results-summary-component-main/index.html
+++ b/desafios/100 desafios/ds03/results-summary-component-main/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | Results summary component</title>
+  <title>Desafio 03 Frontend Mentor</title>
 
 </head>
 <body>
