--- a/Exerci/ex023/index.html
+++ b/Exerci/ex023/index.html
@@ -11,6 +11,7 @@
         }
 
         table {
+            height: 400px;
             width: 400px;
             border-collapse: collapse;
         }
@@ -18,6 +19,8 @@
         td {
             border: 1px solid black;
             padding: 2px;
+            text-align: center;
+            vertical-align: middle;
 
         }
     </style>
