--- a/Exerci/ex023/tabela02.html
+++ b/Exerci/ex023/tabela02.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
