--- a/desafios/100 desafios/ds05/index.html
+++ b/desafios/100 desafios/ds05/index.html
@@ -23,15 +23,15 @@
           Perfumista-Criador da Casa CHANEL.
         </p>
         <p class="preço">
-          <strong>$149.99</strong>  $169.99
+          <strong>R$ 149.99</strong>   R$ 169.99
         </p>
         <a href="#" class="botao"><span class="emoji" data-emoji="&#x1F6D2;"></span>Adicionar ao Carrinho</a>
     </section> 
 
   </main>
     <footer>
-      Desafio por <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      codificado por<a href="#">Lucas de Souza Santos</a>.
+      Desafio por <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Codificado por<a href="#"> Lucas de Souza Santos</a>.
     </footer>
 </body>
 </html>
