--- a/Exerci/ex024/iframe.html
+++ b/Exerci/ex024/iframe.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
 </head>
+<style>
+    iframe {
+        width: 500px;
+        height: 500px;
+    }
+</style>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com/" frameborder=""></iframe> para aprender a progamar.</p>
+    <p>Acessando o site do
+        
+         <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+
+    para aprender a progamar.</p>
+    <p>Aqui é 
+        <iframe src="https://gustavoguanabara.github.io/" frameborder="0">
+            <a href="https://gustavoguanabara.github.io/" target="_blank"></a>
+        </iframe>
+         o github do Gustavo Guanabara</p>
 </body>
 </html>
