--- a/Exerci/ex024/iframe02.html
+++ b/Exerci/ex024/iframe02.html
@@ -16,11 +16,13 @@
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore cupiditate beatae minima repellendus velit tempora iste quam reiciendis maxime, vitae magni, molestias culpa facere mollitia! In facere rerum magni natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quo amet, quas soluta porro dolorum, blanditiis quidem in totam molestiae culpa error nesciunt excepturi, fuga debitis? Cum laboriosam ipsum dolores.</p>
 
-    <iframe src="teste01.html" frameborder="0" width="500px" height="300px"></iframe>
+    <iframe src="https://lucassouza57.github.io/desafio04/" frameborder="0" width="500px" height="300px">
+        <p>Erro!!!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore cupiditate beatae minima repellendus velit tempora iste quam reiciendis maxime, vitae magni, molestias culpa facere mollitia! In facere rerum magni natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quo amet, quas soluta porro dolorum, blanditiis quidem in totam molestiae culpa error nesciunt excepturi, fuga debitis? Cum laboriosam ipsum dolores.</p>
 
-    <iframe src="teste02.html" frameborder="0" width="500px" height="300px"></iframe>
+    <iframe src="testes/teste02.html" frameborder="0" width="500px" height="300px"></iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore cupiditate beatae minima repellendus velit tempora iste quam reiciendis maxime, vitae magni, molestias culpa facere mollitia! In facere rerum magni natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quo amet, quas soluta porro dolorum, blanditiis quidem in totam molestiae culpa error nesciunt excepturi, fuga debitis? Cum laboriosam ipsum dolores.</p>
 </body>
