--- a/desafios/curso/d014/index.html
+++ b/desafios/curso/d014/index.html
@@ -13,8 +13,13 @@
 <body>
     <main>
         <section id="telefone">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instragram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
         </section>
     </main>
     
