--- a/Exerci/ex025/formu01.html
+++ b/Exerci/ex025/formu01.html
@@ -27,8 +27,8 @@
 <body>
     <h1>Meu primeiro formulário</h1>
     <form>
-        <p>Nome : <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome : <input type="text" name="sobrenome" id="sobrenome"></p>
+        <p><label for="inome">Nome :</label> <input type="text" name="nome" id="inome"></p>
+        <p><label for="isobrenome">Sobrenome :</label> <input type="text" name="sobrenome" id="isobrenome"></p>
         <p id="enviar"><input type="submit" value="Enviar"></p>
     </form>
 </body>
