--- a/Exerci/ex025/formu01.html
+++ b/Exerci/ex025/formu01.html
@@ -26,9 +26,13 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form>
-        <p><label for="inome">Nome :</label> <input type="text" name="nome" id="inome"></p>
-        <p><label for="isobrenome">Sobrenome :</label> <input type="text" name="sobrenome" id="isobrenome"></p>
+    <form action="cadastro.php" method="post">
+        <p>
+            <label for="inome">Nome :</label> <input type="text" name="nome" id="inome">
+        </p>
+        <p>
+            <label for="isobrenome">Sobrenome :</label> <input type="text" name="sobrenome" id="isobrenome">
+        </p>
         <p id="enviar"><input type="submit" value="Enviar"></p>
     </form>
 </body>
