--- a/Exerci/ex025/formu02.html
+++ b/Exerci/ex025/formu02.html
@@ -13,6 +13,12 @@
         form {
             width: 300px;
             border: 1px solid black;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+           
+            
         }
 
         div {
