--- a/Exerci/ex026/mq03/index.html
+++ b/Exerci/ex026/mq03/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries em CSS</title>
-    <link rel="stylesheet" href="estilo/style.css" media="all">
-    <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="estilo/paisagem.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mude a orienteção do seu dispositivo</h1>
