fim da aula de media query e projeto do curso

--- a/Exerci/ex026/mq04/index.html
+++ b/Exerci/ex026/mq04/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilo/Media-Query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="smartphone" src="imagem/icon-phone.png" alt="Acessando via smartphone ">
+        <img id="talbet" src="imagem/icon-tablet.png" alt="Acessando via talbet">
+        <img id="print" src="imagem/icon-print.png" alt="Acessando versão para impressora">
+        <img id="pc" src="imagem/icon-pc.png" alt="Acessando via computador">
+        <img id="tv" src="imagem/icon-tv.png" alt="Acessando via TV">
+
+    </main>
 </body>
 </html>
