--- a/Exerci/ex026/mq05/index.html
+++ b/Exerci/ex026/mq05/index.html
@@ -7,8 +7,9 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span class="material-symbols-outlined" id="botao-menu" onclick="clickMenu()">menu</span>
@@ -29,11 +30,20 @@
     </main>
 
     <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itensmenu.style.display = 'block'
+            } else {
+                itensmenu.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (itensmenu.style.display == "block") {
-                itensmenu.style.display = "none";
+                itensmenu.style.display = "none"
             } else {
-                itensmenu.style.display = "block";
+                itensmenu.style.display = "block"
             }
         }
     </script>
