tentando melhorar o projeto do zero

--- a/desafios/100 desafios/ds09/index.html
+++ b/desafios/100 desafios/ds09/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link rel="stylesheet" href="estilo/style.css" media="all">
-  <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation: portrait)">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
+  <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
   <main>
-        <article>
-          <h1>Junte-se a nossa comunidade</h1>
-          <h2>Garantia de reembolso de 30 dias sem complicações</h2>
-          <p>
-            Obtenha acesso à nossa biblioteca completa de tutoriais, juntamente com revisões de código especializadas.
-            Perfeito para todos os desenvolvedores que levam a sério o aprimoramento de suas habilidades.
-          </p>
-        </article>
-      <section id="primeiro">
-        <h2>Assinatura Mensal</h2>
-        <p id="preço"><strong>$ 29 </strong> por mês</p>
-        <p>Acesso total por menos de $1 por dia</p>
-        <div id="botao"><a href="#">Inscrever-se</a></div>
-      </section>
-      
-      <section id="segundo">
-        <h3>Por que usar</h3>
-        <p>Tutoriais de especialistas do setor Revisão de código por colegas e especialistas Exercícios de codificação Acesso aos nossos repositórios do GitHub Fórum da comunidade Flashcard decks Novos vídeos toda semana</p>
-      </section>
+    <section id="cabeçalho">
+      <h1>Junte-se a nossa comunidade</h1>
+      <h2>Garantia de reembolso de 30 dias sem complicações</h2>
+      <p>
+      Obtenha acesso à nossa biblioteca completa de tutoriais, juntamente com revisões de código especializadas.
+      Perfeito para todos os desenvolvedores que levam a sério o aprimoramento de suas habilidades.
+      </p>
+    </section>
+    <section id="valores">
+      <h2>Assinatura mensal</h2>
+      <p id="preço-por-mes"><strong>$29</strong> por mês</p>
+      <p>Acesso total por menos de $1 por dia</p>
+      <a href="#" id="botao-de-increver">inscrever-se</a>
+    </section>
+    <section id="pq-usar">
+      <h2>Por que usar?</h2>
+      <p>Tutoriais de especialistas do setor</p>
+      <p>Revisão de código de especialista por pares</p>
+      <p>Exercícios de codificação</p>
+      <p>Acesso aos nossos repositórios GitHub</p>
+      <p>Fórum da Comunidade</p>
+      <p>Baralhos flashcard</p>
+      <p>Novos vídeos toda semana</p>
+    </section>
   </main>
+  
   <footer>
     <p class="attribution">
-      Desafio por <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      codificado por <a href="#">Lucas de Souza Santos</a>.
+      Desafio por<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Codificado por <a href="https://github.com/lucassouza57">Lucas de Souza Santos</a>.
     </p>
   </footer>
 </body>
