falta terminar esse projeto

--- a/desafios/100 desafios/ds09/index.html
+++ b/desafios/100 desafios/ds09/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
+  <link rel="stylesheet" href="estilo/media-query.css">
   <link rel="stylesheet" href="estilo/style.css">
+  <title>Frontend Mentor | Single Price Grid Component</title>
 </head>
 <body>
   <main>
@@ -23,7 +23,7 @@
       <h2>Assinatura mensal</h2>
       <p id="preço-por-mes"><strong>$29</strong> por mês</p>
       <p>Acesso total por menos de $1 por dia</p>
-      <a href="#" id="botao-de-increver">inscrever-se</a>
+      <div><a href="#" id="botao-de-increver">Inscrever-se</a></div>
     </section>
     <section id="pq-usar">
       <h2>Por que usar?</h2>
@@ -39,7 +39,7 @@
   
   <footer>
     <p class="attribution">
-      Desafio por<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Desafio por <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Codificado por <a href="https://github.com/lucassouza57">Lucas de Souza Santos</a>.
     </p>
   </footer>
