--- a/desafios/curso/d015/index.html
+++ b/desafios/curso/d015/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
 <body>
     <main>
@@ -16,18 +17,9 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça seu login para poder acessar sua conta.</p>
                 <form action="longin.php" method="post">
-                    <div class="campo">
-                        <input type="email" name="email" id="iemail">
-                    </div>
-                    <div class="campo">
-                        <input type="password" name="senha" id="isenha">
-                    </div>
-                    <div >
-                        <input type="submit" value="Entrar">
-                    </div>
+                    
                 </form>
             </div>
-            <a href="#" id="botao-esqueceu-senha">Esqueceu a senha</a>
         </section>
     </main>
 </body>
