--- a/Exerci/ex001/index.html
+++ b/Exerci/ex001/index.html
@@ -11,5 +11,7 @@
     <hr>
     <p>Esse é meu primeiro documento HTML! Estou muito feliz! </p>
     <p>Este é um momento único! Estou criando um site</p>
+
+    <input type="button" value="">
 </body>
 </html>
