--- a/desafios/100 desafios/ds17 conselhos/index.html
+++ b/desafios/100 desafios/ds17 conselhos/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Advice Generator</title>
 
     <link rel="shortcut icon" href="images/favicon-32x32-svg.png" type="image/x-icon">
 
