desafio novo preciso termina

--- a/desafios/100 desafios/ds17 conselhos/index.html
+++ b/desafios/100 desafios/ds17 conselhos/index.html
@@ -14,7 +14,9 @@
         <h1>Advice Generator</h1>
         <button id="generateBtn">Generate Council</button>
         <div><img src="images/pattern-divider-mobile.svg" alt="divisoria"></div>
-        <div class="advice" id="adviceContainer"></div>
+        <div class="advice" id="adviceContainer">
+            <button id="fala" class="hidden">Speak</button>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
