--- a/desafios/100 desafios/ds22 teste/index.html
+++ b/desafios/100 desafios/ds22 teste/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonho da Dri</title>
+    <link rel="shortcut icon" href="imagens/bolo.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query">
+
 </head>
 <body>
     <header>
