falta terminar o projeto

--- a/desafios/100 desafios/ds24/index.html
+++ b/desafios/100 desafios/ds24/index.html
@@ -5,96 +5,125 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="estilo/style.css">
   
-  <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
+  <title>Página inicial do Fylo com tema escuro e grade de recursos</title>
 </head>
 <body>
-  Features
-  Team
-  Sign In
+  <header>
+    <a href="#"><img src="images/logo.svg" alt="logo"></a>
+    <nav>
+      <ul>
+        <li>Características</li>
+        <li>Equipe</li>
+        <li>Entrar</li>     
+      </ul>
+    </nav>
+  </header>
+<main>
+  <img src="images/illustration-intro.png" alt="">
+    <section id="container02">
+      <h1>Todos os seus arquivos em um local seguro, acessível em qualquer lugar.</h1>
+      <p>
+        Fylo armazena todos os seus arquivos mais importantes em um local seguro. Acesse-os em qualquer lugar
+        você precisa, compartilhe e colabore com amigos, familiares e colegas de trabalho.
+      </p>
+      <div class="btn"><a href="#">Iniciar</a></div>
+    </section>
+    <div class="container03">
+      <section>
+        <h2>Acesse seus arquivos, em qualquer lugar</h2>
+        <p>
+          A capacidade de usar um smartphone, tablet ou computador para acessar sua conta significa que seu
+           arquivos seguem você em todos os lugares.
+        </p>
+      </section>
+       <section>
+         <h2>Segurança em que você pode confiar</h2>
+         <p>
+           Autenticação de dois fatores e criptografia controlada pelo usuário são apenas alguns dos recursos de segurança
+           recursos que permitimos para ajudar a proteger seus arquivos.
+         </p>
+       </section>
+       <section>
+         <h2>Colaboração em tempo real</h2>
+           <p>Compartilhe arquivos e pastas com segurança com amigos, familiares e colegas para colaboração ao vivo.</p>
+       </section>
+      <section>
+        <h2>Armazene qualquer tipo de arquivo</h2>
+        <p>
+          Esteja você compartilhando fotos de férias ou documentos de trabalho, a Fylo oferece cobertura, permitindo que todos
+          tipos de arquivos sejam armazenados e compartilhados com segurança.
+        </p>
+      </section>
+    </div>
+  
+    <div class="container04">
+      <img src="images/illustration-stay-productive.png" alt="logo" style="width: 40vw;">
+      <section>
+        <h2>Mantenha-se produtivo, onde quer que esteja</h2>
+        <p>
+          Nunca deixe que a localização seja um problema ao acessar seus arquivos. Fylo oferece cobertura para todos os seus arquivos
+           necessidades de armazenamento.
+        </p>
+         <p>
+           Compartilhe arquivos e pastas com segurança com amigos, familiares e colegas para colaboração ao vivo. Nenhum e-mail
+           anexos necessários.
+         </p>
+         <p><a href="#">Veja como o Fylo funciona</a></p>
+      </section>
+       <section class="container-comentarios">
+         <p>
+           Fylo melhorou a produtividade de nossa equipe em uma ordem de magnitude. Desde que fizemos a mudança, nossa equipe tem
+           tornar-se uma máquina de colaboração bem lubrificada.
+         </p>
+           <p><strong>Satish Patel</strong></p>
+           <p>Fundador e CEO, Huddle</p>
+       </section>
+      <section class="container-comentarios">
+        <p>
+          Fylo melhorou a produtividade de nossa equipe em uma ordem de magnitude. Desde que fizemos a mudança, nossa equipe tem
+           tornar-se uma máquina de colaboração bem lubrificada.
+        </p>
+        <p><strong>Bruce McKenzie</strong></p>
+        <p>Founder & CEO, Huddle</p>
+      </section>
+      <section class="container-comentarios">
+        <p>
+          Fylo melhorou a produtividade de nossa equipe em uma ordem de magnitude. Desde que fizemos a mudança, nossa equipe tem
+           tornar-se uma máquina de colaboração bem lubrificada.
+        </p>
+        <p><strong>Iva Boyd</strong></p>
+        <p>Founder & CEO, Huddle</p>
+      </section>
+    </div>
+</main>
+<footer>
+  <h2>Obtenha acesso antecipado hoje</h2>
 
-  All your files in one secure location, accessible anywhere.
+  <p>
+    Leva apenas um minuto para se inscrever e nosso nível inicial gratuito é extremamente generoso. Se você tem algum
+     perguntas, nossa equipe de suporte terá prazer em ajudá-lo.
+  </p>
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
-
-  Get Started
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+    <input type="email" name="email" id="email" placeholder="email@example.com">
+    <button>Get Started For Free</button>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidente ut labore et
+       dolore magna aliqua
     </p>
+    <p>+1-543-123-4567</p>
+    <p>example@fylo.com</p>
+    <ul>
+      <li>Sobre nós</li>
+      <li>Empregos</li>
+      <li>imprensa</li>
+      <li>Blog</li>
+      <li>Contate-nos</li>
+      <li>Termos e Condições</li>
+      <li>Política de Privacidade</li>
+    </ul>
   </footer>
 </body>
 </html>
