fazendo projeto sass

--- a/SASS/projeto/index.html
+++ b/SASS/projeto/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <a href="">
+        <link rel="stylesheet" href="./estilo/CSS/style.css">
+    </a>
 </head>
 <body>
     <header>
         <img src="img/logo.png" alt="Logo">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Portfólio</li>
-                <li>Sobre</li>
-                <li>Contato</li>
-                <li>Curriculo</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Curriculo</a></li>
             </ul>
         </nav>
     </header>
