refazendo o codigo para sass

--- a/SASS/projeto/index.html
+++ b/SASS/projeto/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo">
+        <img src="estilo/img/logo.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfólio</a></li>
                 <li><a href="#">Sobre</a></li>
+                <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Curriculo</a></li>
             </ul>
@@ -31,14 +30,14 @@
             </article>
         </section>
         <figcaption>
-            <img src="img/pessoas-construindo-pc.png" alt="Consturção de um computador">
+            <img src="estilo/img/pessoas-construindo-pc.png" alt="Consturção de um computador">
         </figcaption>
     </main>
     <footer>
         <ul>
-            <li><a href="#"><img src="img/logo-facebook.png" alt="facebook"></a></li>
-            <li><a href="#"><img src="img/logo-insta.png" alt="logo-insta"></a></li>
-            <li><a href="#"><img src="img/logo-twitter.png" alt="logo-twitter"></a></li>
+            <li><a href="#"><img src="estilo/img/logo-facebook.png" alt="facebook"></a></li>
+            <li><a href="#"><img src="estilo/img/logo-insta.png" alt="logo-insta"></a></li>
+            <li><a href="#"><img src="estilo/img/logo-twitter.png" alt="logo-twitter"></a></li>
         </ul>
     </footer>
 </body>
