--- a/Bootstrap/aula01/index.html
+++ b/Bootstrap/aula01/index.html
@@ -4,12 +4,63 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="./assests/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+      div.grid {
+        background: #ffd1c2;
+        border: 2px solid #ffa500;
+        height: 50px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-        <h1>Hello, world!</h1>
+      <div class="row">
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+        <div class="col grid"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 grid"></div>
+        <div class="col-5 grid"></div>
+
+      </div>
+    </div>
+    
+    <script src="./assests/js/bootstrap.bundle.min.js" ></script>
+    <script src="./assests/js/popper.min.js"></script>
+<script src="./assests/js/bootstrap.min.js"></script>
   </body>
 </html>
