--- a/desafios/100 desafios/ds26 site de vendas/index.html
+++ b/desafios/100 desafios/ds26 site de vendas/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Virtual</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--favoicon-->
+    <link rel="apple-touch-icon" tamanhos="57x57" href="./assets/img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" tamanhos="60x60" href="./assets/img/favicons/apple -icon-60x60.png">
+    <link rel="apple-touch-icon" tamanhos="72x72" href="./assets/img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" tamanhos="76x76" href="./assets/img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" tamanhos="114x114" href="./assets/img/favicons/apple-icon-114x114.png">
+    <link rel=" apple-touch-icon" tamanhos="120x120" href="./assets/img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" tamanhos="144x144" href="./assets/img/favicons/apple-icon-144x144. png">
+    <link rel="apple-touch-icon" tamanhos="152x152" href="./assets/img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" tamanhos="180x180" href="./assets/img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" tamanhos="192x192" href="./assets/img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="imagem/png" tamanhos="32x32" href="./assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="imagem/png" tamanhos="96x96" href="./assets/img/favicons/favicon-96x96. png">
+    <link rel="icon" type="image/png" tamanhos="16x16" href="./assets/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <!--favoicon-->
+    <meta name="msapplication-TileColor" content="#ffc107">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffc107">
 </head>
+
 <body>
     asdadasd
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
