add banners promocionais fixos

--- a/desafios/100 desafios/ds26 site de vendas/index.html
+++ b/desafios/100 desafios/ds26 site de vendas/index.html
@@ -68,7 +68,7 @@
                 </ul>
             </article>
         </section>
-    </header>
+    
     <nav class="container-fluid nav-produtos">
         <section class="container">
             <ul class="nav">
@@ -108,24 +108,51 @@
             </ul>
         </section>
     </nav>
-    <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
-        <article class="carousel-inner">
-            <figure class="carousel-item active">
-                <img src="./assets/img/banner-1.jpg" class="d-block w-100" alt="...">
-            </figure>
-            <figure class="carousel-item">
-                <img src="./assets/img/banner-2.jpg" class="d-block w-100" alt="...">
-            </figure>
-        </article>
-        <button class="carousel-control-prev" type="button" data-bs-target="#banner-promocionais" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#banner-promocionais" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </section>
+</header>
+    <main>
+        <section id="banner-promocionais" class="container carousel slide" data-bs-ride="carousel">
+            <article class="carousel-inner">
+                <figure class="carousel-item active">
+                    <img src="./assets/img/banner-1.jpg" class="d-block w-100" alt="...">
+                </figure>
+                <figure class="carousel-item">
+                    <img src="./assets/img/banner-2.jpg" class="d-block w-100" alt="...">
+                </figure>
+            </article>
+            <button class="carousel-control-prev" type="button" data-bs-target="#banner-promocionais" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#banner-promocionais" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </section>
+        <section class="container">
+            <section class="row">
+                <article class="col-md-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                        <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                      </svg>
+                      <p>
+                        Parcelamento até <br>
+                        <strong>12x sem juros</strong>
+                      </p>
+                </article>
+                <article class="col-md-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                      </svg>
+                      <p>
+                        Entrega para <br>
+                        <strong> todo Brasil</strong>
+                      </p>
+                </article>
+            </section>
+            
+        </section>
+    </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
